--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
   "framework": null,
   "functions": {
     "api/*.ts": {
-      "runtime": "@vercel/node@3.0.0"
+      "runtime": "@vercel/node@3.0.0",
+      "maxDuration": 30
     }
   },
   "rewrites": [
